--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,29 +2,25 @@ name: jetleaf_convert
 description: A library that provides high-level of conversion for the Jetleaf application. It powers the conversion of types to the target types based on request.
 version: 1.0.0
 
-publish_to: https://onepub.dev/api/fahnhnofly/
-
 homepage: https://jetleaf.hapnium.com
 repository: https://github.com/jetleaf/jetleaf_convert
 
 topics:
-- Conversion Service
-- Converters
-- Dynamic conversion
+- conversion-service
+- converters
+- dynamic-conversion
 
 keywords:
-- Conversion Service
-- Converters
-- Dynamic conversion
+- conversion-service
+- converters
+- dynamic-conversion
 
 environment:
   sdk: ^3.9.0
 
 dependencies:
   meta: ^1.17.0
-  jetleaf_lang:
-    hosted: https://onepub.dev/api/fahnhnofly/
-    version: ^1.0.0
+  jetleaf_lang: ^1.0.0
 
 dev_dependencies:
   test: ^1.21.0
