--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,33 @@
 name: jetleaf_convert
-description: A library that provides high-level of conversion for the Jetleaf application. It powers the conversion of types to the target types based on request.
-version: 1.0.0
+description: Provides dynamic type conversion utilities for JetLeaf applications.
+version: 1.0.0+2
 
 homepage: https://jetleaf.hapnium.com
 repository: https://github.com/jetleaf/jetleaf_convert
+issue_tracker: https://github.com/jetleaf/jetleaf_convert/issues
+documentation: https://jetleaf.hapnium.com/docs/convert
 
 topics:
-- conversion-service
-- converters
-- dynamic-conversion
+  - conversion
+  - mapping
+  - serialization
+  - jetleaf
+  - adapters
 
 keywords:
-- conversion-service
-- converters
-- dynamic-conversion
+  - conversion
+  - converters
+  - adapters
+  - serialization
+  - jetleaf
 
 environment:
   sdk: ^3.9.0
 
 dependencies:
   meta: ^1.17.0
-  jetleaf_lang: ^1.0.0
+  jetleaf_lang: 
+    path: ../jetleaf_lang
 
 dev_dependencies:
   test: ^1.21.0
