--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: jetleaf_convert
 description: Provides dynamic type conversion utilities for JetLeaf applications.
-version: 1.0.0+2
+version: 1.0.1
 
 homepage: https://jetleaf.hapnium.com
 repository: https://github.com/jetleaf/jetleaf_convert
@@ -26,8 +26,7 @@ environment:
 
 dependencies:
   meta: ^1.17.0
-  jetleaf_lang: 
-    path: ../jetleaf_lang
+  jetleaf_lang: ^1.0.1
 
 dev_dependencies:
   test: ^1.21.0
